# DrugDesign_data_analysis

./: .flake8  .gitignore  .gitmodules  CONTRIBUTING.md  QUESTIONS.md  README.md  configurations.json  filtering_toxicity.ipynb  main.py  pyproject.toml  requirements.txt  ruff.toml
.extra/doxygen/: doxyfile
ChEMBL_combine/: combine.py
ChEMBL_download/: analysis.py  combine.py  download.py  functions.py  narrowing.py  primary_analysis.py
ChEMBL_download_activities/: README.md  download.py  functions.py
ChEMBL_download_cell_lines/: README.md  download.py  functions.py
ChEMBL_download_compounds/: README.md  combine.py  download.py  functions.py  primary_analysis.py
ChEMBL_download_targets/: README.md  download.py  functions.py
Configurations/: config.json  config.py
PubChem_download/: download.py
PubChem_download_toxicity/: README.md  characteristics.py  download.py  functions.py
Utils/: combine_funcs.py  dataframe_funcs.py  decorators.py  file_and_logger_funcs.py  file_funcs.py  files_funcs.py  list_and_dataframe_funcs.py  logger_funcs.py  primary_analysis.py  verbose_logger.py
